--- a/MinimalApiLogic/MinimalApi.Logic.csproj
+++ b/MinimalApiLogic/MinimalApi.Logic.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\MinimalApi.Database\MinimalApi.Database.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.0.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.1" />
+  </ItemGroup>
+
 </Project>
